--- a/src/app/(web)/globals.css
+++ b/src/app/(web)/globals.css
@@ -6,6 +6,10 @@
   @apply object-cover w-full h-full;
 }
 
+body{
+  background-color: #fff7fd;
+}
+
 .scale-animation {
   @apply hover:scale-125 transition-all duration-700;
 }
